--- a/Instagram Clone/Views/EditProfileCustomCells/EditProfileCell.xib
+++ b/Instagram Clone/Views/EditProfileCustomCells/EditProfileCell.xib
@@ -27,7 +27,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="htY-sd-Ssx">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="htY-sd-Ssx">
                                 <rect key="frame" x="10" y="40" width="300" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="h4k-Og-iMc"/>
