adding collection view & custom cells to profile

--- a/Instagram Clone/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Instagram Clone/Views/Storyboards/Base.lproj/Main.storyboard
@@ -192,8 +192,39 @@
                     <view key="view" contentMode="scaleToFill" id="Od7-a3-iW8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ztJ-cy-0wT">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5dx-0p-OPg">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6XI-P2-TSq">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="5dx-0p-OPg" secondAttribute="bottom" id="Ate-9P-eHY"/>
+                                    <constraint firstAttribute="trailing" secondItem="5dx-0p-OPg" secondAttribute="trailing" id="Chl-fE-XoB"/>
+                                    <constraint firstItem="5dx-0p-OPg" firstAttribute="top" secondItem="ztJ-cy-0wT" secondAttribute="top" id="nQr-2s-fby"/>
+                                    <constraint firstItem="5dx-0p-OPg" firstAttribute="leading" secondItem="ztJ-cy-0wT" secondAttribute="leading" id="tfw-8e-Ovm"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="QWg-sM-y8F"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ztJ-cy-0wT" firstAttribute="top" secondItem="QWg-sM-y8F" secondAttribute="top" id="Ghv-iZ-YSx"/>
+                            <constraint firstItem="QWg-sM-y8F" firstAttribute="trailing" secondItem="ztJ-cy-0wT" secondAttribute="trailing" id="KFi-up-Dnq"/>
+                            <constraint firstItem="QWg-sM-y8F" firstAttribute="bottom" secondItem="ztJ-cy-0wT" secondAttribute="bottom" id="T4c-Sp-dPK"/>
+                            <constraint firstItem="ztJ-cy-0wT" firstAttribute="leading" secondItem="QWg-sM-y8F" secondAttribute="leading" id="rOj-Wo-Pq9"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cA0-ZI-05y">
                         <barButtonItem key="rightBarButtonItem" image="gearshape" catalog="system" id="E4n-an-MTY">
@@ -203,6 +234,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="5dx-0p-OPg" id="PDv-mR-lvb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hTr-cB-p90" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
