--- a/Instagram Clone/Views/Storyboards/General.storyboard
+++ b/Instagram Clone/Views/Storyboards/General.storyboard
@@ -112,6 +112,21 @@
             </objects>
             <point key="canvasLocation" x="-811.59420289855075" y="187.5"/>
         </scene>
+        <!--Post View Controller-->
+        <scene sceneID="Tfc-Uw-5ai">
+            <objects>
+                <viewController storyboardIdentifier="PostViewController" id="8ZS-cI-PdH" customClass="PostViewController" customModule="Instagram_Clone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V0J-G0-SA5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="qKd-WM-IyA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TIk-FA-3P0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-465" y="-485"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
