adding tableview ui for post controller

--- a/Instagram Clone/Views/Storyboards/General.storyboard
+++ b/Instagram Clone/Views/Storyboards/General.storyboard
@@ -119,9 +119,36 @@
                     <view key="view" contentMode="scaleToFill" id="V0J-G0-SA5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lcl-08-NNY">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zdg-pb-1gv">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Zdg-pb-1gv" firstAttribute="top" secondItem="Lcl-08-NNY" secondAttribute="top" id="Ccg-4H-SmV"/>
+                                    <constraint firstAttribute="bottom" secondItem="Zdg-pb-1gv" secondAttribute="bottom" id="KnN-kj-0Oz"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zdg-pb-1gv" secondAttribute="trailing" id="Sy1-8W-BxM"/>
+                                    <constraint firstItem="Zdg-pb-1gv" firstAttribute="leading" secondItem="Lcl-08-NNY" secondAttribute="leading" id="T3K-14-Cqr"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="qKd-WM-IyA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="qKd-WM-IyA" firstAttribute="trailing" secondItem="Lcl-08-NNY" secondAttribute="trailing" id="Jz0-jn-53F"/>
+                            <constraint firstItem="Lcl-08-NNY" firstAttribute="leading" secondItem="qKd-WM-IyA" secondAttribute="leading" id="bgG-1E-cIG"/>
+                            <constraint firstItem="Lcl-08-NNY" firstAttribute="top" secondItem="qKd-WM-IyA" secondAttribute="top" id="gsT-sp-eiT"/>
+                            <constraint firstItem="qKd-WM-IyA" firstAttribute="bottom" secondItem="Lcl-08-NNY" secondAttribute="bottom" id="h2Z-LV-hVZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableview" destination="Zdg-pb-1gv" id="oo8-Ad-Aws"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TIk-FA-3P0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
