--- a/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
+++ b/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
@@ -5,16 +5,157 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileInfoHeaderCollectionReusableView" id="U6b-Vx-4bR">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileInfoHeaderCollectionReusableView" id="U6b-Vx-4bR" customClass="ProfileInfoHeaderCollectionReusableView" customModule="Instagram_Clone" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
             <autoresizingMask key="autoresizingMask"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RE3-bv-qGR">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mB9-Zl-52f">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-profile-male" translatesAutoresizingMaskIntoConstraints="NO" id="Kso-iR-e67">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="85"/>
+                                </imageView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBn-1H-uBW">
+                                    <rect key="frame" x="80" y="0.0" width="80" height="85"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13W-dm-mdA">
+                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqS-9m-G8b">
+                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="13W-dm-mdA" firstAttribute="centerX" secondItem="tBn-1H-uBW" secondAttribute="centerX" id="6bd-Z1-Kz1"/>
+                                        <constraint firstItem="NqS-9m-G8b" firstAttribute="top" secondItem="13W-dm-mdA" secondAttribute="bottom" constant="2" id="H7P-Zs-iPi"/>
+                                        <constraint firstItem="NqS-9m-G8b" firstAttribute="leading" secondItem="tBn-1H-uBW" secondAttribute="leading" id="Nu4-Hu-dfO"/>
+                                        <constraint firstItem="13W-dm-mdA" firstAttribute="leading" secondItem="tBn-1H-uBW" secondAttribute="leading" id="rS6-BV-2JC"/>
+                                        <constraint firstItem="13W-dm-mdA" firstAttribute="centerY" secondItem="tBn-1H-uBW" secondAttribute="centerY" id="reO-LO-18D"/>
+                                        <constraint firstAttribute="trailing" secondItem="13W-dm-mdA" secondAttribute="trailing" id="vaS-D2-8bd"/>
+                                        <constraint firstItem="NqS-9m-G8b" firstAttribute="centerX" secondItem="tBn-1H-uBW" secondAttribute="centerX" id="yXz-R9-cvE"/>
+                                        <constraint firstAttribute="trailing" secondItem="NqS-9m-G8b" secondAttribute="trailing" id="zhF-WS-wnG"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wr8-3l-On3">
+                                    <rect key="frame" x="160" y="0.0" width="80" height="85"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfT-9I-PPP">
+                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2o-dq-mez">
+                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="NfT-9I-PPP" secondAttribute="trailing" id="0BN-I2-PHU"/>
+                                        <constraint firstItem="NfT-9I-PPP" firstAttribute="leading" secondItem="wr8-3l-On3" secondAttribute="leading" id="3Jy-HJ-mIq"/>
+                                        <constraint firstItem="R2o-dq-mez" firstAttribute="leading" secondItem="wr8-3l-On3" secondAttribute="leading" id="7q3-7a-MKa"/>
+                                        <constraint firstItem="R2o-dq-mez" firstAttribute="centerX" secondItem="wr8-3l-On3" secondAttribute="centerX" id="L0t-si-0tj"/>
+                                        <constraint firstItem="NfT-9I-PPP" firstAttribute="centerX" secondItem="wr8-3l-On3" secondAttribute="centerX" id="PNo-kA-vvl"/>
+                                        <constraint firstItem="NfT-9I-PPP" firstAttribute="centerY" secondItem="wr8-3l-On3" secondAttribute="centerY" id="ola-2K-S0c"/>
+                                        <constraint firstItem="R2o-dq-mez" firstAttribute="top" secondItem="NfT-9I-PPP" secondAttribute="bottom" constant="2" id="pd4-tM-GWn"/>
+                                        <constraint firstAttribute="trailing" secondItem="R2o-dq-mez" secondAttribute="trailing" id="tAX-GU-GH1"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8te-wB-kKG">
+                                    <rect key="frame" x="240" y="0.0" width="80" height="85"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wF3-iu-nL1">
+                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMo-I7-3lz">
+                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="wF3-iu-nL1" firstAttribute="centerX" secondItem="8te-wB-kKG" secondAttribute="centerX" id="AmZ-M9-CEk"/>
+                                        <constraint firstAttribute="trailing" secondItem="wF3-iu-nL1" secondAttribute="trailing" id="KxN-cn-38D"/>
+                                        <constraint firstAttribute="trailing" secondItem="PMo-I7-3lz" secondAttribute="trailing" id="Xb8-Zl-GSN"/>
+                                        <constraint firstItem="PMo-I7-3lz" firstAttribute="leading" secondItem="8te-wB-kKG" secondAttribute="leading" id="ZnA-en-omP"/>
+                                        <constraint firstItem="PMo-I7-3lz" firstAttribute="centerX" secondItem="8te-wB-kKG" secondAttribute="centerX" id="c8p-iu-Krh"/>
+                                        <constraint firstItem="wF3-iu-nL1" firstAttribute="leading" secondItem="8te-wB-kKG" secondAttribute="leading" id="cgP-4I-VFP"/>
+                                        <constraint firstItem="wF3-iu-nL1" firstAttribute="centerY" secondItem="8te-wB-kKG" secondAttribute="centerY" id="uVh-m4-MrI"/>
+                                        <constraint firstItem="PMo-I7-3lz" firstAttribute="top" secondItem="wF3-iu-nL1" secondAttribute="bottom" constant="2" id="w1t-AI-Dsz"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="85" id="8Wi-ai-FVs"/>
+                            </constraints>
+                        </stackView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKY-Wv-ZjB">
+                            <rect key="frame" x="5" y="90" width="310" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="mB9-Zl-52f" firstAttribute="top" secondItem="RE3-bv-qGR" secondAttribute="top" id="IQY-sR-CBg"/>
+                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="top" secondItem="mB9-Zl-52f" secondAttribute="bottom" constant="5" id="LKL-wG-lCn"/>
+                        <constraint firstAttribute="bottom" secondItem="AKY-Wv-ZjB" secondAttribute="bottom" constant="5" id="RF4-tN-YmH"/>
+                        <constraint firstAttribute="trailing" secondItem="mB9-Zl-52f" secondAttribute="trailing" id="iXv-up-txy"/>
+                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="5" id="jYR-MI-uzk"/>
+                        <constraint firstItem="mB9-Zl-52f" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" id="jbf-xg-qOp"/>
+                        <constraint firstAttribute="trailing" secondItem="AKY-Wv-ZjB" secondAttribute="trailing" constant="5" id="u0Q-Xb-MUa"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
-            <point key="canvasLocation" x="20" y="44"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="RE3-bv-qGR" secondAttribute="bottom" id="JqG-GN-tz4"/>
+                <constraint firstItem="RE3-bv-qGR" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="Qg8-54-bFh"/>
+                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="RE3-bv-qGR" secondAttribute="trailing" id="UED-sM-lor"/>
+                <constraint firstItem="RE3-bv-qGR" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="oX3-BX-Ebv"/>
+            </constraints>
+            <connections>
+                <outlet property="followersLBl" destination="wF3-iu-nL1" id="A0e-fK-qmT"/>
+                <outlet property="followersNbLbl" destination="PMo-I7-3lz" id="aXD-ce-8JC"/>
+                <outlet property="followingLbl" destination="NfT-9I-PPP" id="zXB-bT-n3J"/>
+                <outlet property="followingNbLbl" destination="R2o-dq-mez" id="ZL6-YB-R7C"/>
+                <outlet property="imageview" destination="Kso-iR-e67" id="HXH-Jd-2Z6"/>
+                <outlet property="postNbLbl" destination="NqS-9m-G8b" id="f4m-lt-ef4"/>
+                <outlet property="postsLbl" destination="13W-dm-mdA" id="VOM-di-4uc"/>
+                <outlet property="usernameLbl" destination="AKY-Wv-ZjB" id="5Al-C2-g75"/>
+            </connections>
+            <point key="canvasLocation" x="18.840579710144929" y="65.625"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <image name="placeholder-profile-male" width="370" height="422"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
