--- a/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
+++ b/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
@@ -12,29 +12,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileInfoHeaderCollectionReusableView" id="U6b-Vx-4bR" customClass="ProfileInfoHeaderCollectionReusableView" customModule="Instagram_Clone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RE3-bv-qGR">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mB9-Zl-52f">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-profile-male" translatesAutoresizingMaskIntoConstraints="NO" id="Kso-iR-e67">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="85"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBn-1H-uBW">
-                                    <rect key="frame" x="80" y="0.0" width="80" height="85"/>
+                                    <rect key="frame" x="80" y="0.0" width="80" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13W-dm-mdA">
-                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqS-9m-G8b">
-                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -53,16 +53,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wr8-3l-On3">
-                                    <rect key="frame" x="160" y="0.0" width="80" height="85"/>
+                                    <rect key="frame" x="160" y="0.0" width="80" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfT-9I-PPP">
-                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2o-dq-mez">
-                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -81,16 +81,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8te-wB-kKG">
-                                    <rect key="frame" x="240" y="0.0" width="80" height="85"/>
+                                    <rect key="frame" x="240" y="0.0" width="80" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wF3-iu-nL1">
-                                            <rect key="frame" x="0.0" y="35.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMo-I7-3lz">
-                                            <rect key="frame" x="0.0" y="52" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -110,11 +110,11 @@
                                 </view>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" constant="85" id="8Wi-ai-FVs"/>
+                                <constraint firstAttribute="height" constant="90" id="9Yc-7a-CO9"/>
                             </constraints>
                         </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKY-Wv-ZjB">
-                            <rect key="frame" x="5" y="90" width="310" height="21"/>
+                            <rect key="frame" x="5" y="100" width="310" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -123,8 +123,8 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="mB9-Zl-52f" firstAttribute="top" secondItem="RE3-bv-qGR" secondAttribute="top" id="IQY-sR-CBg"/>
-                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="top" secondItem="mB9-Zl-52f" secondAttribute="bottom" constant="5" id="LKL-wG-lCn"/>
-                        <constraint firstAttribute="bottom" secondItem="AKY-Wv-ZjB" secondAttribute="bottom" constant="5" id="RF4-tN-YmH"/>
+                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="top" secondItem="mB9-Zl-52f" secondAttribute="bottom" constant="10" id="LKL-wG-lCn"/>
+                        <constraint firstAttribute="bottom" secondItem="AKY-Wv-ZjB" secondAttribute="bottom" constant="10" id="RF4-tN-YmH"/>
                         <constraint firstAttribute="trailing" secondItem="mB9-Zl-52f" secondAttribute="trailing" id="iXv-up-txy"/>
                         <constraint firstItem="AKY-Wv-ZjB" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="5" id="jYR-MI-uzk"/>
                         <constraint firstItem="mB9-Zl-52f" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" id="jbf-xg-qOp"/>
@@ -149,7 +149,7 @@
                 <outlet property="postsLbl" destination="13W-dm-mdA" id="VOM-di-4uc"/>
                 <outlet property="usernameLbl" destination="AKY-Wv-ZjB" id="5Al-C2-g75"/>
             </connections>
-            <point key="canvasLocation" x="18.840579710144929" y="65.625"/>
+            <point key="canvasLocation" x="18.840579710144929" y="68.973214285714278"/>
         </collectionReusableView>
     </objects>
     <resources>
