--- a/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
+++ b/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
@@ -12,29 +12,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileInfoHeaderCollectionReusableView" id="U6b-Vx-4bR" customClass="ProfileInfoHeaderCollectionReusableView" customModule="Instagram_Clone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="201"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RE3-bv-qGR">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="201"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mB9-Zl-52f">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                            <rect key="frame" x="5" y="10" width="310" height="90"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-profile-male" translatesAutoresizingMaskIntoConstraints="NO" id="Kso-iR-e67">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-profile-male" translatesAutoresizingMaskIntoConstraints="NO" id="Kso-iR-e67">
+                                    <rect key="frame" x="0.0" y="0.0" width="77.5" height="90"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBn-1H-uBW">
-                                    <rect key="frame" x="80" y="0.0" width="80" height="90"/>
+                                    <rect key="frame" x="77.5" y="0.0" width="77.5" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13W-dm-mdA">
-                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <rect key="frame" x="0.0" y="36.5" width="77.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqS-9m-G8b">
-                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="55.5" width="77.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -45,24 +45,24 @@
                                         <constraint firstItem="13W-dm-mdA" firstAttribute="centerX" secondItem="tBn-1H-uBW" secondAttribute="centerX" id="6bd-Z1-Kz1"/>
                                         <constraint firstItem="NqS-9m-G8b" firstAttribute="top" secondItem="13W-dm-mdA" secondAttribute="bottom" constant="2" id="H7P-Zs-iPi"/>
                                         <constraint firstItem="NqS-9m-G8b" firstAttribute="leading" secondItem="tBn-1H-uBW" secondAttribute="leading" id="Nu4-Hu-dfO"/>
-                                        <constraint firstItem="13W-dm-mdA" firstAttribute="leading" secondItem="tBn-1H-uBW" secondAttribute="leading" id="rS6-BV-2JC"/>
                                         <constraint firstItem="13W-dm-mdA" firstAttribute="centerY" secondItem="tBn-1H-uBW" secondAttribute="centerY" id="reO-LO-18D"/>
                                         <constraint firstAttribute="trailing" secondItem="13W-dm-mdA" secondAttribute="trailing" id="vaS-D2-8bd"/>
+                                        <constraint firstItem="13W-dm-mdA" firstAttribute="leading" secondItem="tBn-1H-uBW" secondAttribute="leading" id="ySI-h8-utl"/>
                                         <constraint firstItem="NqS-9m-G8b" firstAttribute="centerX" secondItem="tBn-1H-uBW" secondAttribute="centerX" id="yXz-R9-cvE"/>
                                         <constraint firstAttribute="trailing" secondItem="NqS-9m-G8b" secondAttribute="trailing" id="zhF-WS-wnG"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wr8-3l-On3">
-                                    <rect key="frame" x="160" y="0.0" width="80" height="90"/>
+                                    <rect key="frame" x="155" y="0.0" width="77.5" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfT-9I-PPP">
-                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <rect key="frame" x="0.0" y="36.5" width="77.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2o-dq-mez">
-                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="55.5" width="77.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -81,16 +81,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8te-wB-kKG">
-                                    <rect key="frame" x="240" y="0.0" width="80" height="90"/>
+                                    <rect key="frame" x="232.5" y="0.0" width="77.5" height="90"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wF3-iu-nL1">
-                                            <rect key="frame" x="0.0" y="38" width="80" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <rect key="frame" x="0.0" y="36.5" width="77.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100K" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMo-I7-3lz">
-                                            <rect key="frame" x="0.0" y="54.5" width="80" height="14.5"/>
+                                            <rect key="frame" x="0.0" y="55.5" width="77.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -113,22 +113,46 @@
                                 <constraint firstAttribute="height" constant="90" id="9Yc-7a-CO9"/>
                             </constraints>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKY-Wv-ZjB">
-                            <rect key="frame" x="5" y="100" width="310" height="16"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKY-Wv-ZjB">
+                            <rect key="frame" x="10" y="110" width="300" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mutiline bio" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDR-4e-awe">
+                            <rect key="frame" x="10" y="132" width="300" height="19"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jp8-2W-4EI">
+                            <rect key="frame" x="10" y="156" width="300" height="35"/>
+                            <color key="backgroundColor" systemColor="systemGray4Color"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="8PN-9R-bev"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="mB9-Zl-52f" firstAttribute="top" secondItem="RE3-bv-qGR" secondAttribute="top" id="IQY-sR-CBg"/>
+                        <constraint firstItem="Jp8-2W-4EI" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="10" id="00g-IN-jww"/>
+                        <constraint firstAttribute="trailing" secondItem="PDR-4e-awe" secondAttribute="trailing" constant="10" id="0gS-ut-m7w"/>
+                        <constraint firstItem="mB9-Zl-52f" firstAttribute="top" secondItem="RE3-bv-qGR" secondAttribute="top" constant="10" id="IQY-sR-CBg"/>
                         <constraint firstItem="AKY-Wv-ZjB" firstAttribute="top" secondItem="mB9-Zl-52f" secondAttribute="bottom" constant="10" id="LKL-wG-lCn"/>
-                        <constraint firstAttribute="bottom" secondItem="AKY-Wv-ZjB" secondAttribute="bottom" constant="10" id="RF4-tN-YmH"/>
-                        <constraint firstAttribute="trailing" secondItem="mB9-Zl-52f" secondAttribute="trailing" id="iXv-up-txy"/>
-                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="5" id="jYR-MI-uzk"/>
-                        <constraint firstItem="mB9-Zl-52f" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" id="jbf-xg-qOp"/>
-                        <constraint firstAttribute="trailing" secondItem="AKY-Wv-ZjB" secondAttribute="trailing" constant="5" id="u0Q-Xb-MUa"/>
+                        <constraint firstAttribute="trailing" secondItem="Jp8-2W-4EI" secondAttribute="trailing" constant="10" id="Xx4-3j-9uC"/>
+                        <constraint firstItem="PDR-4e-awe" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="10" id="djo-Ks-xVG"/>
+                        <constraint firstItem="Jp8-2W-4EI" firstAttribute="top" secondItem="PDR-4e-awe" secondAttribute="bottom" constant="5" id="ej4-Oy-dQ3"/>
+                        <constraint firstAttribute="trailing" secondItem="mB9-Zl-52f" secondAttribute="trailing" constant="5" id="iXv-up-txy"/>
+                        <constraint firstItem="AKY-Wv-ZjB" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="10" id="jYR-MI-uzk"/>
+                        <constraint firstItem="mB9-Zl-52f" firstAttribute="leading" secondItem="RE3-bv-qGR" secondAttribute="leading" constant="5" id="jbf-xg-qOp"/>
+                        <constraint firstAttribute="trailing" secondItem="AKY-Wv-ZjB" secondAttribute="trailing" constant="10" id="u0Q-Xb-MUa"/>
+                        <constraint firstAttribute="bottom" secondItem="Jp8-2W-4EI" secondAttribute="bottom" constant="10" id="uSg-JK-AU9"/>
+                        <constraint firstItem="PDR-4e-awe" firstAttribute="top" secondItem="AKY-Wv-ZjB" secondAttribute="bottom" constant="5" id="xsQ-Uu-Z1T"/>
                     </constraints>
                 </view>
             </subviews>
@@ -140,6 +164,8 @@
                 <constraint firstItem="RE3-bv-qGR" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="oX3-BX-Ebv"/>
             </constraints>
             <connections>
+                <outlet property="bioLbl" destination="PDR-4e-awe" id="OWR-3Q-QAy"/>
+                <outlet property="editBtn" destination="Jp8-2W-4EI" id="bsH-yp-Gv5"/>
                 <outlet property="followersLBl" destination="wF3-iu-nL1" id="A0e-fK-qmT"/>
                 <outlet property="followersNbLbl" destination="PMo-I7-3lz" id="aXD-ce-8JC"/>
                 <outlet property="followingLbl" destination="NfT-9I-PPP" id="zXB-bT-n3J"/>
@@ -149,13 +175,16 @@
                 <outlet property="postsLbl" destination="13W-dm-mdA" id="VOM-di-4uc"/>
                 <outlet property="usernameLbl" destination="AKY-Wv-ZjB" id="5Al-C2-g75"/>
             </connections>
-            <point key="canvasLocation" x="18.840579710144929" y="68.973214285714278"/>
+            <point key="canvasLocation" x="18.840579710144929" y="92.075892857142847"/>
         </collectionReusableView>
     </objects>
     <resources>
         <image name="placeholder-profile-male" width="370" height="422"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
