--- a/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
+++ b/Instagram Clone/Views/ProfileCustomCells/ProfileInfoHeaderCollectionReusableView.xib
@@ -136,6 +136,9 @@
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="editAction:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="iER-XP-WUx"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -168,10 +171,13 @@
                 <outlet property="editBtn" destination="Jp8-2W-4EI" id="bsH-yp-Gv5"/>
                 <outlet property="followersLBl" destination="wF3-iu-nL1" id="A0e-fK-qmT"/>
                 <outlet property="followersNbLbl" destination="PMo-I7-3lz" id="aXD-ce-8JC"/>
+                <outlet property="followersView" destination="8te-wB-kKG" id="PnO-Mt-CfK"/>
                 <outlet property="followingLbl" destination="NfT-9I-PPP" id="zXB-bT-n3J"/>
                 <outlet property="followingNbLbl" destination="R2o-dq-mez" id="ZL6-YB-R7C"/>
+                <outlet property="followingView" destination="wr8-3l-On3" id="tSW-ZX-wit"/>
                 <outlet property="imageview" destination="Kso-iR-e67" id="HXH-Jd-2Z6"/>
                 <outlet property="postNbLbl" destination="NqS-9m-G8b" id="f4m-lt-ef4"/>
+                <outlet property="postView" destination="tBn-1H-uBW" id="zwC-lG-Vhp"/>
                 <outlet property="postsLbl" destination="13W-dm-mdA" id="VOM-di-4uc"/>
                 <outlet property="usernameLbl" destination="AKY-Wv-ZjB" id="5Al-C2-g75"/>
             </connections>
